--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -32,7 +32,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 /// 2. layout - contains styles for different aspects of the
 ///             site's structural layout.
-// @forward "layouts/portfolio-section";
+@forward "layouts/navbar-section.scss";
 // @forward "layouts/contact-section";
 // @forward "layouts/footer-section";
 
