--- a/style.css
+++ b/style.css
@@ -179,3 +179,23 @@ a {
     color: #c66c6e !important;
   }
 }
+
+.herobox > .contentbox > .title {
+  font-weight: bold;
+  font-size: 2.2rem;
+  line-height: 1em;
+  margin-bottom: 0.8em;
+}
+
+.descriptionbox > .description {
+  margin-bottom: 1.2em;
+}
+
+.readmore-btn {
+  padding: 0.8em 2em;
+  background-color: #f15c55;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  font-weight: 600;
+  color: #fff;
+}
