--- a/style.css
+++ b/style.css
@@ -254,3 +254,37 @@ a {
 .news-card .title {
   font-size: 1.2rem !important;
 }
+
+.news-section {
+  counter-reset: post-card-counter;
+}
+@media only screen and (min-width: 992px) {
+  .news-section {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.post-card {
+  display: grid;
+  grid-template-columns: 40% 1fr;
+}
+.post-card > .contentbox {
+  padding: 0 1em 1em 1em;
+}
+.post-card > .contentbox > .counter::before {
+  counter-increment: post-card-counter;
+  content: "0" counter(post-card-counter);
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #c9c8cd;
+}
+.post-card > .contentbox > .title {
+  font-size: 1rem;
+  font-weight: bold;
+}
+@media only screen and (min-width: 992px) {
+  .post-card > .contentbox > .title {
+    font-size: 1.2rem;
+  }
+}
